Added batch functionality to CLI and API - as well as updated multiple documentation files and other related cleanups
